adjusted market loading cards animation to allow it to shrink a bit, this stops the page from pushing off screen on mobile sometimes in sportsbook

--- a/packages/comps/src/components/market-card/market-card.styles.less
+++ b/packages/comps/src/components/market-card/market-card.styles.less
@@ -403,7 +403,7 @@ span.ExtraOutcomes {
     }
 
     &:nth-of-type(3) {
-      grid-template-columns: 1fr @size-250;
+      grid-template-columns: 1fr minmax(@size-200, @size-250);
       grid-template-rows: @size-46 repeat(2, @size-16);
       display: grid;
       grid-column-gap: @size-32;
